# tauri-messenger

./: LICENSE  README.md  package-lock.json  package.json  vite.config.ts
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/client/_app/: version.json
.svelte-kit/output/client/_app/immutable/chunks/: B61nKZNH.js  Bdo-xf_a.js  DJxAduVi.js  O52Vl81L.js
.svelte-kit/output/client/_app/immutable/nodes/: 1.BE1pkbhB.js
.svelte-kit/output/server/: manifest.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/_app/immutable/assets/: _layout.C_AYO9UC.css
.svelte-kit/output/server/chunks/: index.js  internal.js  renderer.js  root.js
.svelte-kit/output/server/entries/pages/: _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs  notification.rs  service.rs  window.rs
src-tauri/src/managers/: mod.rs  notification_manager.rs  service_manager.rs  window_manager.rs
src/lib/components/: AddServiceModal.svelte  EditServiceModal.svelte  ServiceView.svelte  Sidebar.svelte
src/lib/stores/: services.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
