[package]
name = "tauri-messenger"
version = "0.1.0"
description = "Tauri Messenger - Lightweight multi-service messenger client"
authors = ["tu-nombre"]
edition = "2021"

[lib]
name = "tauri_messenger"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
